[workspace]
members = [
  "crates/omq-explore",
  "crates/omq-mux",
  "crates/omq-runtime-core",
  "crates/omq-runtime",
  "crates/omq-sparkshell",
]
resolver = "2"

[workspace.package]

version = "0.11.11"

edition = "2021"
license = "MIT"
repository = "https://github.com/Yeachan-Heo/oh-my-qwencode"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
